# speclang

./: .gitignore  Cargo.toml  README.md
.beads/: issues.jsonl
.beads/export-state/: fcc8c6f2942890c8.json
crates/speclang-backend-rust/: Cargo.toml
crates/speclang-backend-rust/src/: codegen.rs  lib.rs
crates/speclang-backend-wasm/: Cargo.toml
crates/speclang-backend-wasm/src/: codegen.rs  lib.rs
crates/speclang-cli/: Cargo.toml
crates/speclang-cli/src/: main.rs
crates/speclang-diagnostic/: Cargo.toml
crates/speclang-diagnostic/src/: diagnostic.rs  lib.rs  render.rs  source.rs
crates/speclang-fmt/: Cargo.toml
crates/speclang-fmt/src/: impl_fmt.rs  lib.rs  spl_fmt.rs
crates/speclang-impl/: Cargo.toml
crates/speclang-impl/src/: ast.rs  bind.rs  effects.rs  lexer.rs  lib.rs  lower.rs  parser.rs
crates/speclang-ir/: Cargo.toml
crates/speclang-ir-parser/: Cargo.toml
crates/speclang-ir-parser/src/: lexer.rs  lib.rs  parser.rs  printer.rs
crates/speclang-ir/src/: capability.rs  contract.rs  expr.rs  lib.rs  module.rs  types.rs
crates/speclang-lower/: Cargo.toml
crates/speclang-lower/src/: lib.rs  lower.rs
crates/speclang-pkg/: Cargo.toml
crates/speclang-pkg/src/: discover.rs  (+3 more)
crates/speclang-spl/: Cargo.toml
crates/speclang-stdlib/: Cargo.toml
crates/speclang-verify/: Cargo.toml
docs/: core-ir-overview.md  core-ir.md  design-principles.md  ir-grammar.md  spl-grammar  stdlib-v0.md  system-overview.md  workflow.md
samples/: README.md  calculator.impl  calculator.spl  hello.impl  hello.spl  music.spl
samples/expected-output/: README.md  calculator-built.rs  calculator.rs  calculator.wat  hello-built.rs  hello.rs  hello.wat  music.rs  music.wat
(+23 files in other folders)
